--- a/client/src/Pages/Auth/Signin/Signin.css
+++ b/client/src/Pages/Auth/Signin/Signin.css
@@ -171,3 +171,25 @@ h5{
     }
    
   }
+
+@media only screen and (max-width: 1028px) {
+    .logo {
+      display: none;
+      width: 0px;
+      height: 0px;
+    }
+    .logo>p{
+        display: none;
+        width: 0px;
+      height: 0px;
+    }
+    .login{
+         position: absolute;
+        height:100vh;
+        width: 100%;
+        background-color: #ffffff;
+        border-radius: 10px;
+       padding-top:4rem ;
+    }
+   
+  }
